[gd_scene load_steps=9 format=3 uid="uid://dlnr0n5l4fehd"]

[ext_resource type="Script" uid="uid://c2ym7yvfvyp6x" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://dxm5tf7ifqopj" path="res://scenes/LockOn.tscn" id="2_wqd30"]
[ext_resource type="SpriteFrames" uid="uid://cbp5rq438sd8e" path="res://assets/character 1/Player1.tres" id="3_70d11"]
[ext_resource type="AudioStream" uid="uid://cnsvh1mjuawh5" path="res://assets/Audio/sfx_audio/Dor1.wav" id="8_khinc"]
[ext_resource type="AudioStream" uid="uid://cgbs27l6a2ry1" path="res://assets/Audio/sfx_audio/Hit1.wav" id="9_6eyey"]
[ext_resource type="AudioStream" uid="uid://b8xrputsnbtct" path="res://assets/Audio/sfx_audio/Footstep.wav" id="10_d3wef"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t53lx"]
radius = 28.0
height = 248.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vod78"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(-14, 242)
scale = Vector2(1.5, 1.5)
collision_layer = 2
script = ExtResource("1_g2els")
lock_on_scene = ExtResource("2_wqd30")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["player"]]
sprite_frames = ExtResource("3_70d11")
animation = &"reload"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_t53lx")
debug_color = Color(0.9490196, 0, 0, 0.6117647)

[node name="TargetFinder" type="Area2D" parent="." groups=["player"]]
position = Vector2(3.26, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetFinder"]
scale = Vector2(63.595, 63.595)
shape = SubResource("CircleShape2D_vod78")

[node name="ShootCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="InputTimer" type="Timer" parent="."]
one_shot = true

[node name="PenaltyTimer" type="Timer" parent="."]
one_shot = true

[node name="RewardTimer" type="Timer" parent="."]
one_shot = true

[node name="PistolPosition" type="Marker2D" parent="."]
position = Vector2(1, -8)

[node name="SFX_Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_khinc")

[node name="SFX_Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_6eyey")

[node name="FootstepPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_d3wef")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
